Revisar totes les operacions de Serveis SECURE per a que tenguins les respostes com toca #846
